samples/_failures_safe/1761304624_6a5de0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a117518a.c: In function ‘read_sample_logs’:
./samples/SAFE/__tmp_a117518a.c:123:9: error: missing terminating " character
  123 |         "[2024-
      |         ^~~~~~~
./samples/SAFE/__tmp_a117518a.c:123:9: error: expected expression at end of input
./samples/SAFE/__tmp_a117518a.c:123:9: error: expected declaration or statement at end of input
